--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -14,7 +14,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let employee of employees | async">
+          <tr *ngFor="let employee of employees">
             <td>{{employee.id}}</td>
             <td>{{employee.employee_name}}</td>
             <td>{{employee.employee_salary}}</td>
