--- a/src/app/create-employee/create-employee.component.html
+++ b/src/app/create-employee/create-employee.component.html
@@ -1,31 +1,29 @@
 <h3>Them moi nhan vien</h3>
 <div [hidden]="submitted" style="width: 400px;">
-    <form (ngSubmit)="onSubmit()">
+    <form [formGroup]="userFormGroup" novalidate (ngSubmit)="onSubmit()">
         <!-- <div class="form-group">
             <label for="name"></label>
             <input type="text" class="form-control" id="id" required [(ngModel)]="employee.id" name="id">
         </div> -->
         <div class="form-group">
             <label for="name">Ten</label>
-            <input type="text" class="form-control" id="employee_name" required [(ngModel)]="employee.employee_name"
-                name="employee_name">
+            <input type="text" class="form-control" id="employee_name" name="employee_name"
+                formControlName="employee_name">
         </div>
         <div class="form-group">
             <label for="name">Luong</label>
-            <input type="text" class="form-control" id="employee_salary" required [(ngModel)]="employee.employee_salary"
-                name="employee_salary">
+            <input type="text" class="form-control" id="employee_salary" name="employee_salary"
+                formControlName="employee_salary">
         </div>
         <div class="form-group">
             <label for="name">Tuoi</label>
-            <input type="text" class="form-control" id="employee_age" required [(ngModel)]="employee.employee_age"
-                name="employee_age">
+            <input type="text" class="form-control" id="employee_age" name="employee_age"
+                formControlName="employee_age">
         </div>
-
-        <button type="submit" class="btn btn-success">Luu</button>
+        <button type="submit" class="btn btn-success" [disabled]="userFormGroup.status=='INVALID'">Luu</button>
+        <p>Form value: {{userFormGroup.value | json}}</p>
+        <p>Form status: {{userFormGroup.status | json}}</p>
+        <p>Form untouched: {{userFormGroup.untouched | json}}</p>
+        <p>Form dirty: {{userFormGroup.dirty | json}}</p>
     </form>
-</div>
-
-<div [hidden]="!submitted">
-    <h4>You submitted successfully!</h4>
-    <!-- <button class="btn btn-success" (click)="newEmployee()">Add</button> -->
 </div>
