--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -1,35 +1,36 @@
 <div class="panel panel-primary">
-    <div class="panel-heading">
-      <h2>Employee List</h2>
-    </div>
-    <div class="panel-body">
-      <table class="table table-striped">
-        <thead>
-          <tr>
-            <th>Id</th>
-            <th>Ten</th>
-            <th>Luong</th>
-            <th>Tuoi</th>
-            <th>Thao tac</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let employee of employees">
-            <td>{{employee.id}}</td>
-            <td>{{employee.employee_name}}</td>
-            <td>{{employee.employee_salary}}</td>
-            <td>{{employee.employee_age}}</td>
-            <td>
-                <button (click)="employeeUpdate(employee.id)" class="btn btn-info" style="margin-left: 10px">Update</button>
-                <button (click)="deleteEmployee(employee.id)" class="btn btn-danger" style="margin-left: 10px">Delete</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+  <div class="panel-heading">
+    <h2>Employee List</h2>
   </div>
+  <div class="panel-body">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Id</th>
+          <th>Ten</th>
+          <th>Luong</th>
+          <th>Tuoi</th>
+          <th>Thao tac</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let employee of employees">
+          <td>{{employee.id}}</td>
+          <td>{{employee.employee_name}}</td>
+          <td>{{employee.employee_salary}}</td>
+          <td>{{employee.employee_age}}</td>
+          <td>
+            <button (click)="employeeUpdate(employee.id)" class="btn btn-info" style="margin-left: 10px">Update</button>
+            <button (click)="deleteEmployee(employee.id)" class="btn btn-danger"
+              style="margin-left: 10px">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
 
 
-  <!-- <td><button (click)="deleteEmployee(employee.id)" class="btn btn-danger">Delete</button>
+<!-- <td><button (click)="deleteEmployee(employee.id)" class="btn btn-danger">Delete</button>
     <button (click)="employeeDetails(employee.id)" class="btn btn-info" style="margin-left: 10px">Details</button>
 </td> -->
